--- a/PokemonReviewProject/appsettings.json
+++ b/PokemonReviewProject/appsettings.json
@@ -1,10 +1,14 @@
 ﻿{
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+   "ConnectionStrings": {
+    "SqlServerConnection": "Server=localhost;Database=master;User=sa;Password=reallyStrongPwd123;"
+  }
 }
 
