--- a/PokemonReviewProject/appsettings.json
+++ b/PokemonReviewProject/appsettings.json
@@ -1,14 +1,13 @@
 ﻿{
-
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=master;User=sa;Password=reallyStrongPwd123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-   "ConnectionStrings": {
-    "SqlServerConnection": "Server=localhost;Database=master;User=sa;Password=reallyStrongPwd123;"
-  }
+  "AllowedHosts": "*"
 }
 
