--- a/PokemonReviewProject/PokemonReviewProject.csproj
+++ b/PokemonReviewProject/PokemonReviewProject.csproj
@@ -14,6 +14,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.PowerBI.Api" Version="4.8.0" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,10 +25,30 @@
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
     <None Remove="Data\" />
     <None Remove="Microsoft.PowerBI.Api" />
+    <None Remove="Repository\" />
+    <None Remove="Repository\OwnerFile\" />
+    <None Remove="Repository\PokemonFile\" />
+    <None Remove="Repository\CategoryFile\" />
+    <None Remove="Repository\CountryFile\" />
+    <None Remove="Repository\ReviewFile\" />
+    <None Remove="Repository\ReviewerFile\" />
+    <None Remove="DTOs\" />
+    <None Remove="AutoMapper" />
+    <None Remove="Helper\" />
+    <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Data\" />
+    <Folder Include="Repository\" />
+    <Folder Include="Repository\OwnerFile\" />
+    <Folder Include="Repository\PokemonFile\" />
+    <Folder Include="Repository\CategoryFile\" />
+    <Folder Include="Repository\CountryFile\" />
+    <Folder Include="Repository\ReviewFile\" />
+    <Folder Include="Repository\ReviewerFile\" />
+    <Folder Include="DTOs\" />
+    <Folder Include="Helper\" />
   </ItemGroup>
 </Project>
